--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Webstacks",
+  "name": "webstacks",
   "version": "1.0",
   "description": "React TypeScript Material-UI boilerplate by Welcome, Developer.",
   "author": {
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@babel/core": "7.12.3",
+    "@emotion/css": "^11.7.1",
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
     "@material-ui/core": "^4.12.3",
@@ -39,6 +40,7 @@
     "case-sensitive-paths-webpack-plugin": "2.3.0",
     "classnames": "^2.3.1",
     "css-loader": "4.3.0",
+    "d3-color": "^3.0.1",
     "dotenv": "8.2.0",
     "dotenv-expand": "5.1.0",
     "eslint": "^7.11.0",
@@ -83,8 +85,8 @@
     "sass": "^1.44.0",
     "sass-loader": "10",
     "semver": "7.3.2",
+    "storybook-react-context": "^0.4.0",
     "style-loader": "1.3.0",
-    "styled-components": "^5.3.3",
     "terser-webpack-plugin": "4.2.3",
     "ts-pnp": "1.2.0",
     "typescript": "^4.0.3",
@@ -102,7 +104,8 @@
     "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx}\"",
     "lint": "eslint \"src/**/*.{js,jsx,ts,tsx}\" --quiet",
     "storybook": "start-storybook -p 6006 -s public",
-    "build-storybook": "build-storybook -s public"
+    "build-storybook": "build-storybook",
+    "prettier-watch": "onchange \"**/*\" -- prettier --write --ignore-unknown {{changed}}"
   },
   "eslintConfig": {
     "extends": [
@@ -142,6 +145,7 @@
   },
   "devDependencies": {
     "@storybook/addon-actions": "^6.4.8",
+    "@storybook/addon-contexts": "^5.3.21",
     "@storybook/addon-essentials": "^6.4.8",
     "@storybook/addon-links": "^6.4.8",
     "@storybook/addons": "^6.4.9",
@@ -155,9 +159,13 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "prettier": "^2.3.2"
+    "module-alias": "^2.2.2",
+    "prettier": "^2.3.2",
+    "storybook-dark-mode": "^1.0.8",
+    "storybook-theme-toggle": "^0.1.2"
   },
   "jest": {
     "roots": [
@@ -213,5 +221,15 @@
     "presets": [
       "react-app"
     ]
+  },
+  "_moduleAliases": {
+    "@components": "dist/components",
+    "@styles": "dist/styles",
+    "@assets": "dist/assets",
+    "@config": "dist/config",
+    "@context": "dist/context",
+    "@hooks": "dist/styhooksles",
+    "@types": "dist/types",
+    "@utils": "dist/utils"
   }
 }
