--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "webstacks",
-  "version": "1.0",
+  "version": "1.0.0",
   "description": "React TypeScript Material-UI boilerplate by Welcome, Developer.",
   "author": {
     "name": "Webstacks",
@@ -84,9 +84,10 @@
     "resolve-url-loader": "^3.1.2",
     "sass": "^1.44.0",
     "sass-loader": "10",
-    "semver": "7.3.2",
+    "semver": "^7.3.5",
     "storybook-react-context": "^0.4.0",
     "style-loader": "1.3.0",
+    "styled-components": "^5.3.3",
     "terser-webpack-plugin": "4.2.3",
     "ts-pnp": "1.2.0",
     "typescript": "^4.0.3",
@@ -154,6 +155,7 @@
     "@storybook/react": "^6.4.8",
     "@storybook/theming": "^6.4.9",
     "@types/react-router-dom": "^5.1.6",
+    "@types/styled-components": "^5.1.19",
     "@typescript-eslint/parser": "^4.31.2",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
